# NumSim

./: .gitignore  Makefile  README.md  main.cpp  parameters.txt  settings.cpp
compare_output/: CMakeLists.txt  main.cpp
openfoam_ex/cavity/constant/: transportProperties
openfoam_ex/cavityHeat/0/: U  p  p_rgh
openfoam_ex/cavityHeat/constant/: transportProperties  turbulenceProperties
openfoam_ex/cavityHeat/system/: PDRblockMeshDict  blockMeshDict  controlDict  fvSchemes  fvSolution
openfoam_ex/karmanVortex/0/: U  p
openfoam_ex/karmanVortex/system/: blockMeshDict  controlDict
openfoam_ex/step/0/: U  p
openfoam_ex/step/constant/: transportProperties
openfoam_ex/step/system/: blockMeshDict  controlDict
src/: CMakeLists.txt  main.cpp  parameters.txt  settings.cpp  settings.h
src/computation/: computation.cpp  computation.h  parallelComputation.cpp  parallelComputation.h
src/discretization/: StaggeredGrid.cpp  centralDifferences.cpp  centralDifferences.h  discretization.cpp  discretization.h  donorCell.cpp  donorCell.h  staggeredGrid.cpp  staggeredGrid.h
src/output_writer/: output_writer.h  output_writer_paraview.h  output_writer_paraview_parallel.cpp  output_writer_paraview_parallel.h  output_writer_text.cpp  output_writer_text_parallel.cpp  write_paraview_output.cpp
src/output_writer_serial/: output_writer.cpp  output_writer_paraview.cpp  output_writer_paraview.h  output_writer_text.cpp  output_writer_text.h  write_paraview_output.cpp
src/partitioning/: partitioning.cpp  partitioning.h
src/pressureSolver/: cg.cpp  cg.h  gaussSeidel.cpp  gaussSeidel.h  mgpcg.cpp  mgpcg.h  multigrid.cpp  multigrid.h  parallelGaussSeidel.cpp  parallelGaussSeidel.h  parallelPressureSolver.cpp  parallelPressureSolver.h  parallel_cg.cpp  parallel_cg.h  parallel_multigrid.cpp  parallel_multigrid.h  parallel_sor.cpp  parallel_sor.h  parallelcg.cpp  parallelcg.h  pressureSolver.cpp  pressureSolver.h  sor.cpp  sor.h
src/storage/: FieldVariable.cpp  FieldVariable.h  array2d.cpp  array2d.h
